trying to fix background img not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h1 span{
   width:100%;
   height:100%;
   z-index:10;
-  background:url('../images/background/start-page.tif') #c0c0c0 bottom center fixed no-repeat;
+  background:url('../images/background/start-page.jpg') #c0c0c0 bottom center fixed no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
